--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,16 +5,20 @@
             </div>
     
     <div class="item c1" routerLink="/apropos">
+        <div class="background" style="background-image: url('../../assets/images/menu-apropos.jpg')"></div>
             <div class="text">À propos</div>
     </div>
     <div class="item c2"  routerLink="/experiences">
+        <div class="background" style="background-image: url('../../assets/images/menu-experiences.jpg')"></div>
             <div class="text">Expériences</div>
     </div>
 
     <div class="item c3" routerLink="/formations">
+        <div class="background" style="background-image: url('../../assets/images/menu-formations.jpg')"></div>
             <div class="text">Formations</div>
     </div>
     <div class="item c4" routerLink="/competences">
+        <div class="background" style="background-image: url('../../assets/images/menu-competences.jpg')"></div>
             <div class="text">Compétences</div>
     </div>
 </section>
