--- a/src/app/propos/propos.component.html
+++ b/src/app/propos/propos.component.html
@@ -1,22 +1,56 @@
+<app-menu></app-menu>
 <section id="main">
-  <app-menu></app-menu>
-  <div class="row principal">
-    <div class="col-md-4 background"></div>
-    <div class="col-md-8">
-      <div class="row scrollable">
-        <div class="scroll-section">
-          <div class="container">
-            <div id="presentation">erz <br />ezerz<br /> erez <br />rzer <br />zer <br />ezz <br />erze <br />rze <br />ez rze </div>
-            <div id="contact">rer <br />zrz <br />eza <br />zezr <br />ze rr <br />zer zer <br />zeez <br />rze r</div>
-            <div id="social">ez<br /> rr<br /> ezz zer<br /> rez<br /> zer re <br />zre <br />ezer z</div>
-          </div>
-        </div>
+
+  <div class="container">
+    <div class="text presentation"></div>
+    <div class="text contact"></div>
+    <div class="text social"></div>
+  </div>
+
+
+  <section id="timeline">
+    <div class="tl-item">
+      <div class="tl-bg utbm" style="background-image: url('../../assets/images/demineur.PNG')"></div>
+      <div class="tl-year">
+        <p class="f2 heading--sanSerif">Jeu - Démineur</p>
       </div>
-      <div class="row projects">
-        <div class="col p1"></div>
-        <div class="col p2"></div>
-        <div class="col p3"></div>
+
+
+      <div class="tl-content">
+        <h1></h1>
+        <p><br /><br /></p>
+      </div>
+
+    </div>
+
+    <div class="tl-item">
+
+      <div class="tl-bg" style="background-image:  url('../../assets/images/graph-fsr.png')"></div>
+
+      <div class="tl-year">
+        <p class="f2 heading--sanSerif">Graph - FSR</p>
+      </div>
+
+      <div class="tl-content">
+        <h1 class="f3 text--accent ttu"></h1>
+        <p><br /> <br /></p>
+      </div>
+
+    </div>
+
+    <div class="tl-item">
+
+      <div class="tl-bg" style="background-image: url('../../assets/images/site-cv.PNG')"></div>
+
+      <div class="tl-year">
+        <p class="f2 heading--sanSerif">Site - CV</p>
+      </div>
+
+      <div class="tl-content">
+        <h1 class="f3 text--accent ttu"></h1>
+        <p><br /><br /></p>
       </div>
     </div>
-  </div>
+  </section>
+
 </section>
