--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,5 +1,6 @@
+<app-menu></app-menu>
 <section id="main">
-  <app-menu></app-menu>
+
 <section id="timeline">
 
           <div class="tl-item">
@@ -52,7 +53,7 @@
 
           <div class="tl-item">
             
-            <div class="tl-bg ixblue" style="background-image: url('../../assets/images/ixblue.jpg')"></div>
+            <div class="tl-bg ixblue" style="background-image: url('../../assets/images/ixblue2.png')"></div>
             
             <div class="tl-year">
               <p class="f2 heading--sanSerif">2018</p>
