--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,49 +1,5 @@
-
-
-/*.scrollbar {
-        margin-left: 30px;
-        float: left;
-        height: 300px;
-        width: 65px;
-        background: #fff;
-        overflow-y: scroll;
-        }
-
-    .force-overflow {
-        min-height: 450px;
-    }
-        
-    .scrollbar-primary::-webkit-scrollbar {
-        width: 12px;
-        background-color: #F5F5F5; 
-    }
-        
-    .scrollbar-primary::-webkit-scrollbar-thumb {
-        border-radius: 10px;
-        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-        background-image: -webkit-gradient(linear, left bottom, left top, from(#30cfd0), to(#330867));
-        background-image: -webkit-linear-gradient(bottom, #30cfd0 0%, #330867 100%);
-        background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
-    } */
-        
-
-
-        .scrollbar-ripe-malinka::-webkit-scrollbar-track {
-        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-        background-color: #F5F5F5;
-        border-radius: 10px; }
-        
-        .scrollbar-ripe-malinka::-webkit-scrollbar {
-        width: 12px;
-        background-color: #F5F5F5; }
-        
-        .scrollbar-ripe-malinka::-webkit-scrollbar-thumb {
-        border-radius: 10px;
-        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-        background-image: -webkit-linear-gradient(330deg, #f093fb 0%, #f5576c 100%);
-        background-image: linear-gradient(120deg, #f093fb 0%, #f5576c 100%); }
-        
-        .example-1 {
-        position: relative;
-        overflow-y: scroll;
-        height: 200px; }
+.footer{
+    position: absolute;
+    width:100%;
+    background-color: #263238;
+}
