--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,7 +1,7 @@
 
 #centered-circle{
     position:fixed;
-    background-image: url('../../assets/images/portrait.jpg');
+    //background-image: url('../../assets/images/portrait.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
@@ -15,7 +15,7 @@
     margin-left: -35vh;
     border:1px solid black;
     z-index: 5;
-    box-shadow: 0 0 30px 10px;
+    box-shadow: 0 0 20px 10px;
     //filter: grayscale(100%);
  }
  #photo{
@@ -57,6 +57,8 @@
     font-size: 3vw;
     color: #FFF;
     text-shadow: 2px 2px 2px black;
+
+    
  }
  
  .item{
@@ -65,22 +67,36 @@
     background-size: cover;
     width:50%;
     height: 50%;
-    transition: filter 0.8s, width 0.8s,height 0.8s;
-    filter: grayscale(60%);
+    transition: filter 0.5s;
     cursor: pointer;
- 
+
      &:hover{
-       filter:none;
-       width:50.5%;
-       height:50.5%;
-       z-index:2;
+       .background{
+          filter: brightness(100%);
+       }
      }
+ }
+
+ .background {
+   transform: translate3d(0, 0, 0);
+   position: absolute;
+   width: 100%; height: 100%;
+   top: 0; left: 0;
+   background-size: cover;
+   background-position: center center;
+   transition: filter 0.5s ease;
+   filter: brightness(80%);
  }
  
  .c1{
     top:0;
     left:0;
-    background-image: url(https://placeimg.com/801/801/nature);
+    
+    
+    &::after{
+      filter: brightness(20%);
+    }
+
     .text{
        top:30%;
        left: 23%;
@@ -90,7 +106,7 @@
  .c2{
     top:0;
     right: 0;
-    background-image: url('../../assets/images/ge.jpg');
+    
     .text{
        top:30%;
        right: 17%;
@@ -100,17 +116,21 @@
  .c3{
     bottom:0;
     left:0;
-    background-image: url(https://placeimg.com/803/803/nature);
+
     .text{
        bottom:30%;
        left: 20%;
+    }
+
+    .background{
+       background-position: bottom left;
     }
  }
  
  .c4{
     bottom:0;
     right:0;
-    background-image: url(https://placeimg.com/800/800/nature);
+    
     .text{
        bottom:30%;
        right: 15%;
@@ -127,6 +147,9 @@
     .text{
        font-size: 5vw;
     }
+    .background{
+       filter:brightness(90%);
+    }
  }
  
  @media screen and (max-width: 760px){
@@ -139,6 +162,9 @@
     .text{
        font-size: 5vw;
     }
+    .background{
+      filter:brightness(90%);
+   }
     .c3{
        .text{
           left:18%;
