--- a/src/app/propos/propos.component.scss
+++ b/src/app/propos/propos.component.scss
@@ -1,60 +1,196 @@
 #main{
+  position: relative;
   width:100%;
   height: 100%;
 }
-.principal{
+
+#main::before{
+  content:"";
+  position: absolute;
+  top:0; left:0;
+  width:100%;
   height: 100%;
-}
-
-.background{
-  box-shadow: 0px 0px 30px 10px;
-  background-image: url('../../assets/images/wood-background.jpg');
+  background-image: url('../../assets/images/back-propos.jpg');
   background-position: center;
-  background-repeat: no-repeat;
   background-size: cover;
-  z-index: 2;
-}
-
-.scrollable{
-  background-color: black;
-  height:60%;
-}
-
-.scroll-section{
-  margin-top: 90px;
-  margin-left: 8%;
-  height: 70%;
-  width: 80%;
-  overflow: hidden;
+  filter: brightness(90%);
 }
 
 .container{
-  height: 100%;
-  margin-left: 17px;
-  background-color: steelblue;
-  text-align: center;
-  overflow-y: scroll;
-  //font-size: 80px;
+  position: relative;
+  height: 60%;
+  padding-top: 90px;
+}
+.text{
+  font-size: 32px;
+  color: #fff;
 }
 
-.projects{
-  height: 40%;
-  &:hover{
-    .col{
-      width:0%;
+body {
+  font-family: 'Source Sans Pro',Helvetica Neue,Helvetica,Arial,sans-serif; 
+  font-size: 16px;
+  line-height: 1.75;
+}
+
+#timeline {
+  display: flex;
+
+
+  &:hover {
+    .tl-item {
+      width: 25%;
     }
   }
 }
 
+.tl-item {
+  transform: translate3d(0, 0, 0);
+  position: relative;
+  width: 33.3333%;
+  height: 40vh;
+  box-shadow: 0 -5px 20px 0px rgba(0,0,0,0.75);
+  color: #fff;
+  overflow: hidden;
+  transition: width 0.5s ease, height 0.5s ease;
+  
+  &:before, &:after {
+    transform: translate3d(0, 0, 0);
+    content: '';
+    position: absolute;
+    left: 0; top: 0;
+    width: 100%; height: 100%;
+  }
 
-.p1{
-  background-color: red;
+  &:after {
+    background: transparentize(#031625, 0.90);
+    opacity: 1;
+    transition: opacity 0.5s ease;
+  }
+
+  &:before {
+    background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 100%);
+    z-index: 1;
+    opacity: 0;
+    transform: translate3d(0, 0, 0) translateY(50%);
+    transition: opacity 0.5s ease, transform 0.5s ease;
+  }
+
+  &:hover {
+    width: 50% !important;
+    
+    &:after {
+      opacity: 0;
+    }
+
+    &:before {
+      opacity: 1;
+      transform: translate3d(0, 0, 0) translateY(0);
+      transition: opacity 1s ease, transform 1s ease 0.25s;
+    }
+    
+    .tl-content {
+      opacity: 1;
+      transform: translateY(0);
+      transition: all 0.75s ease 0.5s;
+    }
+
+    .tl-year{
+      top: 20%;
+      p{
+        text-shadow: 2px 2px 2px black;
+      }
+    }
+
+    .tl-bg {
+      filter: brightness(110%);
+    }
+  }
 }
 
-.p2{
-  background-color: orange;
+.tl-content {
+  transform: translate3d(0, 0, 0) translateY(25px);
+  position: relative;
+  z-index: 1;
+  text-align: center;
+  margin: 0 1.618em;
+  top: 55%;
+  opacity: 0;
+  
+  h1 {
+    font-family: 'Pathway Gothic One',Helvetica Neue,Helvetica,Arial,sans-serif;
+    text-transform: uppercase;
+    color: cyan;
+    font-size: 1.45rem;
+    font-weight: normal;
+    text-decoration: none;
+  }
+
+  p{
+    font-size: 1.20rem;
+  }
 }
 
-.p3{
-  background-color: yellow;
+.tl-year {
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  width:100%;
+  transform: translateX(-50%) translateY(-50%);
+  z-index: 1;
+  text-align: center;
+  transition: all 0.5s ease 0.3s;
+  
+  p {
+    font-family: comfortaa;
+    text-shadow: 2px 2px 2px black;
+    font-size: 1.8rem;
+    line-height: 0;
+  }
+}
+
+.tl-bg {
+  transform: translate3d(0, 0, 0);
+  position: absolute;
+  width: 100%; height: 100%;
+  top: 0; left: 0;
+  background-size: cover;
+  background-position: center center;
+  transition: filter 0.5s ease;
+  filter: brightness(80%);
+}
+
+
+@media screen and (max-width: 1025px){
+  #timeline{
+      display:block;
+
+      &:hover {
+        .tl-item {
+          height:30vh;
+          width:100%;
+        }
+      }
+  }
+  .tl-item{
+      width:100%;
+      height: 33.3333vh;
+      min-height: 0px;
+      transition: height 0.5s ease;
+
+      &:hover {
+          width: 100% !important;
+          height:60vh !important;
+
+          .tl-year{
+              top:20%;
+          }
+      } 
+  }
+  .tl-content{
+      top:40%;
+
+      p{
+        font-size: 1.10rem;
+      }
+  }
 }
