--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -53,7 +53,7 @@
 
           <div class="tl-item">
             
-            <div class="tl-bg ixblue" style="background-image: url('../../assets/images/ixblue2.png')"></div>
+            <div class="tl-bg ixblue" style="background-image: url('../../assets/images/ixblue.png')"></div>
             
             <div class="tl-year">
               <p class="f2 heading--sanSerif">2018</p>
