--- a/src/app/propos/propos.component.html
+++ b/src/app/propos/propos.component.html
@@ -2,12 +2,31 @@
 <section id="main">
 
   <div class="container">
-    <div class="text presentation"></div>
-    <div class="text contact"></div>
-    <div class="text social"></div>
+    <div class="row">
+      <div class="col-md-8 presentation">
+        <h1>Je m'appelle Rémi Papillier</h1>
+        <h2>Passioné d'informatique et de design,<br /> je suis curieux et j'ai un bon relationnel</h2>
+        <p>J'ai 21 ans et travaille actuellement comme apprenti développeur (application/web) chez General Electric</p>
+      </div>
+      <div class="col-md-4 links">
+        <div class="cv">
+          <div class="cv-text">Téléchargez mon CV</div>
+          <div class="cv-logo">
+              <a href=""  target="_blank"><img src="../../assets/images/logo-cv.png" style="width: 35px; height: 50px;"></a>
+          </div>
+        </div>
+        <div class="social">
+          <div class="soc-text">Retrouvez moi sur</div>
+          <div class="soc-logo">
+            <a href="https://github.com/RemiPapillier" target="_blank"><img src="../../assets/images/github.png" style="width: 50px; height: 50px; filter:brightness(0) invert(1)"></a>
+            <a href="" target="_blank"><img src="../../assets/images/linkedin.png" style="width: 70px; height: 70px; filter:brightness(0) invert(1)"></a>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
-
+  <div class="title">- Projets Personnels -</div>
   <section id="timeline">
     <div class="tl-item">
       <div class="tl-bg utbm" style="background-image: url('../../assets/images/demineur.PNG')"></div>
@@ -17,8 +36,9 @@
 
 
       <div class="tl-content">
-        <h1></h1>
-        <p><br /><br /></p>
+        <h1 class="f3 text--accent ttu">Création d'un jeu en Java</h1>
+        <p>Technologie Java, Scene Builder<br />Création du graphisme des pages<br />Algorithmes du jeu</p>
+        <a href="https://github.com/RemiPapillier" target="_blank"><img src="../../assets/images/github.png" style="width: 50px; height: 50px; filter:brightness(0) invert(1)"></a>
       </div>
 
     </div>
@@ -28,12 +48,13 @@
       <div class="tl-bg" style="background-image:  url('../../assets/images/graph-fsr.png')"></div>
 
       <div class="tl-year">
-        <p class="f2 heading--sanSerif">Graph - FSR</p>
+        <p class="f2 heading--sanSerif">Instrum - FSR</p>
       </div>
 
       <div class="tl-content">
-        <h1 class="f3 text--accent ttu"></h1>
-        <p><br /> <br /></p>
+        <h1 class="f3 text--accent ttu">Projet Capteur de Mastication</h1>
+        <p>Développement d'un capteur de mastication à l'aide d'un capteur FSR<br />Instrumentation avec Arduino/Raspberry<br />Visualisation des résultats en Java (JFreeChart)</p>
+        <a href="https://github.com/RemiPapillier" target="_blank"><img src="../../assets/images/github.png" style="width: 50px; height: 50px; filter:brightness(0) invert(1)"></a>
       </div>
 
     </div>
@@ -47,8 +68,9 @@
       </div>
 
       <div class="tl-content">
-        <h1 class="f3 text--accent ttu"></h1>
-        <p><br /><br /></p>
+        <h1 class="f3 text--accent ttu">Création d'un site personnel</h1>
+        <p>Développement sur Angular avec Bootstrap<br />Déploiement intégration continue netlify<br />HTML/CSS/JS</p>
+        <a href="https://github.com/RemiPapillier" target="_blank"><img src="../../assets/images/github.png" style="width: 50px; height: 50px; filter:brightness(0) invert(1)"></a>
       </div>
     </div>
   </section>
