--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,12 @@
     src: url("assets/fonts/Comfortaa-SemiBold.ttf") format("truetype");
 }
 
+@font-face{
+    font-family: 'roboto';
+    src: url("assets/fonts/Roboto-Regular.ttf") format("truetype");
+}
+
+
 html, body { 
     height: 100%;
     width: 100%;
