--- a/src/app/formation/formation.component.scss
+++ b/src/app/formation/formation.component.scss
@@ -9,6 +9,7 @@ body {
 #timeline {
   display: flex;
   background-color: #031625;
+  margin-top:-70px;
 
   &:hover {
     .tl-item {
@@ -144,6 +145,7 @@ body {
 @media screen and (max-width: 1025px){
   #timeline{
       display:block;
+      margin-top:0;
 
       &:hover {
         .tl-item {
