--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -1,12 +1,13 @@
 
 .nav{
-    position: fixed;
+    position: relative;
     top:0;
     width:100%;
     background: rgba(0,0,0,0);
     //background:#263238;
     display: flex;
     justify-content: center;
+    height: 70px;
     min-height: 70px;
     z-index: 5;
 
