--- a/src/app/propos/propos.component.html
+++ b/src/app/propos/propos.component.html
@@ -53,7 +53,7 @@
 
       <div class="tl-content">
         <h1 class="f3 text--accent ttu">Projet Capteur de Mastication</h1>
-        <p>Développement d'un capteur de mastication à l'aide d'un capteur FSR<br />Instrumentation avec Arduino/Raspberry<br />Visualisation des résultats en Java (JFreeChart)</p>
+        <p>Développement d'un capteur de mastication<br />Instrumentation avec Arduino/Raspberry<br />Visualisation en Java (JFreeChart)</p>
         <a href="https://github.com/RemiPapillier" target="_blank"><img src="../../assets/images/github.png" style="width: 50px; height: 50px; filter:brightness(0) invert(1)"></a>
       </div>
 
