--- a/src/app/propos/propos.component.html
+++ b/src/app/propos/propos.component.html
@@ -38,7 +38,7 @@
       <div class="tl-content">
         <h1 class="f3 text--accent ttu">Création d'un jeu en Java</h1>
         <p>Technologie Java, Scene Builder<br />Création du graphisme des pages<br />Algorithmes du jeu</p>
-        <a href="https://github.com/RemiPapillier" target="_blank"><img src="../../assets/images/github.png" style="width: 50px; height: 50px; filter:brightness(0) invert(1)"></a>
+        <a href="https://github.com/RemiPapillier/Minesweeper" target="_blank"><img src="../../assets/images/github.png" style="width: 50px; height: 50px; filter:brightness(0) invert(1)"></a>
       </div>
 
     </div>
@@ -54,7 +54,7 @@
       <div class="tl-content">
         <h1 class="f3 text--accent ttu">Projet Capteur de Mastication</h1>
         <p>Développement d'un capteur de mastication<br />Instrumentation avec Arduino/Raspberry<br />Visualisation en Java (JFreeChart)</p>
-        <a href="https://github.com/RemiPapillier" target="_blank"><img src="../../assets/images/github.png" style="width: 50px; height: 50px; filter:brightness(0) invert(1)"></a>
+        <a href="https://github.com/RemiPapillier/capteur_FSR" target="_blank"><img src="../../assets/images/github.png" style="width: 50px; height: 50px; filter:brightness(0) invert(1)"></a>
       </div>
 
     </div>
@@ -70,7 +70,7 @@
       <div class="tl-content">
         <h1 class="f3 text--accent ttu">Création d'un site personnel</h1>
         <p>Développement sur Angular avec Bootstrap<br />Déploiement intégration continue netlify<br />HTML/CSS/JS</p>
-        <a href="https://github.com/RemiPapillier" target="_blank"><img src="../../assets/images/github.png" style="width: 50px; height: 50px; filter:brightness(0) invert(1)"></a>
+        <a href="https://github.com/RemiPapillier/webCV" target="_blank"><img src="../../assets/images/github.png" style="width: 50px; height: 50px; filter:brightness(0) invert(1)"></a>
       </div>
     </div>
   </section>
