--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <section id="home">
     <div id="centered-circle">
-           <!-- <div class="name">Rémi<br />Papillier
-            </div>-->
-            </div>
+        <div class="background-circle" style="background-image: url('../../assets/images/portrait-menu.jpg')"></div>
+           <div class="name">- Rémi -</div>
+    </div>
     
     <div class="item c1" routerLink="/apropos">
         <div class="background" style="background-image: url('../../assets/images/menu-apropos.jpg')"></div>
