--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,11 +1,6 @@
 
 #centered-circle{
     position:fixed;
-    //background-image: url('../../assets/images/portrait.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-color: white;
     border-radius: 50%;
     top:50%;
     left:50%;
@@ -15,35 +10,32 @@
     margin-left: -35vh;
     border:1px solid black;
     z-index: 5;
-    box-shadow: 0 0 20px 10px;
-    //filter: grayscale(100%);
+    box-shadow: 0 0 30px 15px;
  }
- #photo{
-    position:fixed;
-    background-image: url('../../assets/images/remi.png');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: contain;
-    top:50%;
-    left:50%;
-    height:90vh;
-    width:40vh;
-    margin-top: -45vh;
-    margin-left: -20vh;
-    z-index: 5;
-    filter:brightness(120%);
+
+ .background-circle {
+   transform: translate3d(0, 0, 0);
+   border-radius: 50%;
+   position: absolute;
+   width: 100%; height: 100%;
+   top: 0; left: 0;
+   background-size: contain;
+   background-position: center center;
+   transition: filter 0.5s ease;
+   filter: brightness(85%);
  }
+
 
  .name{
     width:100%;
     position: absolute;
     font-family: comfortaa;
     font-size: 3.5vw;
-    color: black;
+    color: #fff;
     text-align: center;
-    text-shadow: 2px 2px 2px cyan;
+    text-shadow: 2px 2px 2px black;
     position: absolute;
-    bottom: 10%;
+    bottom: 20%;
  }
  
  #home{
@@ -85,7 +77,7 @@
    background-size: cover;
    background-position: center center;
    transition: filter 0.5s ease;
-   filter: brightness(80%);
+   filter: brightness(70%);
  }
  
  .c1{
@@ -148,7 +140,7 @@
        font-size: 5vw;
     }
     .background{
-       filter:brightness(90%);
+       filter:brightness(75%);
     }
  }
  
@@ -159,11 +151,14 @@
        margin-top: -30vw;
        margin-left: -30vw;
     }
+    .name{
+       font-size: 5vw;
+    }
     .text{
        font-size: 5vw;
     }
     .background{
-      filter:brightness(90%);
+      filter:brightness(75%);
    }
     .c3{
        .text{
