--- a/src/app/propos/propos.component.html
+++ b/src/app/propos/propos.component.html
@@ -19,7 +19,7 @@
           <div class="soc-text">Retrouvez moi sur</div>
           <div class="soc-logo">
             <a href="https://github.com/RemiPapillier" target="_blank"><img src="../../assets/images/github.png" style="width: 50px; height: 50px; filter:brightness(0) invert(1)"></a>
-            <a href="" target="_blank"><img src="../../assets/images/linkedin.png" style="width: 70px; height: 70px; filter:brightness(0) invert(1)"></a>
+            <a href="https://www.linkedin.com/in/r%C3%A9mi-papillier-6b4b5b192/" target="_blank"><img src="../../assets/images/linkedin.png" style="width: 70px; height: 70px; filter:brightness(0) invert(1)"></a>
           </div>
         </div>
       </div>
