--- a/src/app/formation/formation.component.scss
+++ b/src/app/formation/formation.component.scss
@@ -90,7 +90,8 @@ body {
   opacity: 0;
   
   h1 {
-    font-family: 'Pathway Gothic One',Helvetica Neue,Helvetica,Arial,sans-serif;
+    //font-family: 'Pathway Gothic One',Helvetica Neue,Helvetica,Arial,sans-serif;
+    text-shadow: 1px 1px 1px black;
     text-transform: uppercase;
     color: cyan;
     font-size: 1.45rem;
