--- a/src/app/propos/propos.component.html
+++ b/src/app/propos/propos.component.html
@@ -6,13 +6,14 @@
       <div class="col-md-8 presentation">
         <h1>Je m'appelle Rémi Papillier</h1>
         <h2>Passioné d'informatique et de design,<br /> je suis curieux et j'ai un bon relationnel</h2>
-        <p>J'ai 21 ans et travaille actuellement comme apprenti développeur (application/web) chez General Electric</p>
+        <p>J'ai 21 ans et travaille actuellement comme apprenti développeur (application/web) chez General Electric</p><br />
+        <p>Contact : <a class="sendmail" href="mailto:remi-papillier@hotmail.fr">remi-papillier@hotmail.fr</a></p>
       </div>
       <div class="col-md-4 links">
         <div class="cv">
           <div class="cv-text">Téléchargez mon CV</div>
           <div class="cv-logo">
-              <a href=""  target="_blank"><img src="../../assets/images/logo-cv.png" style="width: 35px; height: 50px;"></a>
+              <a href="../../assets/CV_remi.pdf" target="_blank" download><img src="../../assets/images/logo-cv.png" style="width: 35px; height: 50px;"></a>
           </div>
         </div>
         <div class="social">
