--- a/src/app/experience/experience.component.scss
+++ b/src/app/experience/experience.component.scss
@@ -95,6 +95,7 @@ body {
     //font-family: 'Pathway Gothic One',Helvetica Neue,Helvetica,Arial,sans-serif;
     text-transform: uppercase;
     color: cyan;
+    text-shadow: 1px 1px 1px black;
     font-size: 1.35rem;
     font-weight: normal;
     text-decoration: none;
@@ -229,10 +230,10 @@ body {
     margin: 0 1em;
 
     h1{
-      font-size: 1.20rem;
+      font-size: 1.10rem;
     }
     p{
-      font-size: 1rem;
+      font-size: 0.9rem;
     }
   }
 }
