--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -83,7 +83,7 @@
  .c1{
     top:0;
     left:0;
-    
+    border-right: 1px solid #fff; border-bottom: 1px solid #fff;
     
     &::after{
       filter: brightness(20%);
@@ -98,7 +98,8 @@
  .c2{
     top:0;
     right: 0;
-    
+    border-left: 1px solid #fff; border-bottom: 1px solid #fff;
+
     .text{
        top:30%;
        right: 17%;
@@ -108,6 +109,7 @@
  .c3{
     bottom:0;
     left:0;
+    border-right: 1px solid #fff; border-top: 1px solid #fff;
 
     .text{
        bottom:30%;
@@ -122,6 +124,7 @@
  .c4{
     bottom:0;
     right:0;
+    border-left: 1px solid #fff; border-top: 1px solid #fff;
     
     .text{
        bottom:30%;
