--- a/src/app/propos/propos.component.scss
+++ b/src/app/propos/propos.component.scss
@@ -19,7 +19,7 @@
 .container{
   position: relative;
   padding-top: 140px;
-  padding-bottom: 70px;
+  padding-bottom: 40px;
   padding-left: 0;
   padding-right: 0;
 
@@ -52,6 +52,15 @@
     font-size: 1.5rem;
     font-weight: 300;
     margin-bottom: 20px;
+  }
+
+  .sendmail{
+    color: #fff;
+    text-decoration: underline;
+
+    &:hover{
+      color: cyan;
+    }
   }
 
   .links{
@@ -283,7 +292,7 @@ body {
     }
 }
   .container{
-    padding-bottom: 30px;
+    padding-bottom: 20px;
 
     .links{
       display: none;
@@ -292,16 +301,16 @@ body {
       padding:0;
     }
     h1{
-      line-height: 2.4rem;
-      font-size:1.8rem;
+      line-height: 2.2rem;
+      font-size:1.6rem;
     }
     h2{
-      line-height: 2rem;
-      font-size: 1.2rem;
+      line-height: 1.8rem;
+      font-size: 1.1rem;
     }
     p{
-      line-height: 1.7rem;
-      font-size: 1.1rem;
+      line-height: 1.6rem;
+      font-size: 1rem;
     }
   }
   .title{
