--- a/src/app/formation/formation.component.html
+++ b/src/app/formation/formation.component.html
@@ -10,8 +10,8 @@
                           <div class="tl-year">
                             <p class="f2 heading--sanSerif">2021 - 2018</p>
                           </div>
-                    
-                      
+                          <!--<div class="tl-logo l-utbm" style="background-image: url('../../assets/images/l-utbm.png')"></div>-->
+    
                           <div class="tl-content">
                             <h1>École d'ingénieur informatique</h1>
                             <p><br />UTBM (Université de Technologie Belfort-Montbéliard) <br /> Informatique et Systèmes d'informations</p>
@@ -26,7 +26,7 @@
                           <div class="tl-year">
                             <p class="f2 heading--sanSerif">2018 - 2016</p>
                           </div>
-                      
+                          <!--<div class="tl-logo l-iut" style="background-image: url('../../assets/images/l-iut.png')"></div>-->
                           <div class="tl-content">
                             <h1 class="f3 text--accent ttu">DUT Mesures Physiques</h1>
                             <p><br />IUT Paris Diderot, 13ème arondissement <br /> Option Informatique et Acoustique</p>
@@ -41,7 +41,7 @@
                           <div class="tl-year">
                             <p class="f2 heading--sanSerif">2016</p>
                           </div>
-                      
+                          <!--<div class="tl-logo l-lycee" style="background-image: url('../../assets/images/lpv.png')"></div>-->
                           <div class="tl-content">
                             <h1 class="f3 text--accent ttu">Baccalauréat scientifique</h1>
                             <p><br />Lycée les Pierres Vives, Carrières sur Seine <br /> Spécialité Physique-chimie</p>
