--- a/src/app/propos/propos.component.html
+++ b/src/app/propos/propos.component.html
@@ -6,7 +6,7 @@
       <div class="col-md-8 presentation">
         <h1>Je m'appelle Rémi Papillier</h1>
         <h2>Passioné d'informatique et de design,<br /> je suis curieux et j'ai un bon relationnel</h2>
-        <p>J'ai 21 ans et travaille actuellement comme apprenti développeur (application/web) chez General Electric</p><br />
+        <p>J'ai 21 ans et je travaille actuellement comme apprenti développeur (application/web) chez General Electric</p><br />
         <p>Contact : <a class="sendmail" href="mailto:remi-papillier@hotmail.fr">remi-papillier@hotmail.fr</a></p>
       </div>
       <div class="col-md-4 links">
