--- a/src/app/competence/competence.component.html
+++ b/src/app/competence/competence.component.html
@@ -1,49 +1,47 @@
 <app-menu></app-menu>
 <section id="main">
     <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 first">
                     <div class="flip up left">
-                            <div class="front" style="background-image: url(https://images.pexels.com/photos/540518/pexels-photo-540518.jpeg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb)">
+                            <div class="front" style="background-image: url('../../assets/images/techniques.jpg'); background-position: top left;">
                                <h1>Techniques</h1>
                             </div>
                             <div class="back">
-                               <h2>Angular</h2>
-                               <p>Good tools make application development quicker and easier to maintain than if you did everything by hand..</p>
+                               <h2>Techniques</h2>
+                               <p>◦ Langages de programmation:<br /> HTML/CSS/JS , C# , Java , C/C++ , SQL<br />◦ Notions de méthodes agiles et management</p>
                             </div>
                         </div>
                     <div class="flip left">
-                            <div class="front" style="background-image: url(https://cdn.pixabay.com/photo/2016/03/09/10/37/light-bulb-1246043_1280.jpg)">
+                            <div class="front" style="background-image: url('../../assets/images/technologiques.jpg')">
                                <h1>Technologiques</h1>
                             </div>
                             <div class="back">
-                               <h2>Angular</h2>
-                               <p>Good tools make application development quicker and easier to maintain than if you did everything by hand..</p>
+                               <h2>Technologies</h2>
+                               <p>◦ Web Angular/Bootstrap, Ruby on Rails<br />◦ Applications .Net<br />◦ GitHub, déploiement et intégration continue</p>
                             </div>
                         </div>
             </div>
                 <div class="col-md-6">
                         <div class="flip up right">
-                                <div class="front" style="background-image: url(https://images.pexels.com/photos/36717/amazing-animal-beautiful-beautifull.jpg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb)">
+                                <div class="front" style="background-image: url('../../assets/images/linguistiques.jpg')">
                                    <h1>Linguistiques</h1>
                                 </div>
                                 <div class="back">
-                                   <h2>Angular</h2>
-                                   <p>Good tools make application development quicker and easier to maintain than if you did everything by hand..</p>
+                                   <h2>Langues</h2>
+                                   <p>◦ Anglais, pratique professionnelle<br />Bulats niveau C1 et 1 mois en entreprise à l'étranger<br />◦ Francais, langue maternelle</p>
                                 </div>
                             </div>
                         <div class="flip right">
-                                <div class="front" style="background-image: url(https://cdn.pixabay.com/photo/2018/03/10/12/00/paper-3213924_1280.jpg)">
+                                <div class="front rel" style="background-image: url('../../assets/images/relationnelles.jpg')">
                                    <h1>Relationnelles</h1>
                                 </div>
                                 <div class="back">
-                                   <h2>Angular</h2>
-                                   <p>Good tools make application development quicker and easier to maintain than if you did everything by hand..</p>
+                                   <h2>Social</h2>
+                                   <p>◦ Bon esprit d'équipe<br />Travailler en équipe / Manager une équipe<br />◦ Ambitieux, organisé, autonome et dynamique</p>
                                 </div>
                             </div>
                 </div>
-                
-
-</div>
-<div class="arrow arrow-first"></div>
-                <div class="arrow arrow-second"></div>
+    </div>
+    <div class="arrow arrow-first"></div>
+    <div class="arrow arrow-second"></div>
 </section>
