--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -20,7 +20,7 @@
             </div>
         
           </div>
-        
+        <!--
           <div class="tl-item">
             
             <div class="tl-bg" style="background-image:  url('../../assets/images/test.jpg')"></div>
@@ -31,10 +31,10 @@
         
             <div class="tl-content">
               <h1 class="f3 text--accent ttu">Expérience à l'étranger</h1>
-              <!--<p>(Septembre 2018 - Août 2021)<br />Equipe Monitoring & Diagnostic<br /><br />● Apporter des solutions pour l'automatisation des tâches<br />● Dévelopement de script pour la mise en forme de données<br />● Créer et tester des outils sur la Predix GE</p>-->
+              <p>(Septembre 2018 - Août 2021)<br />Equipe Monitoring & Diagnostic<br /><br />● Apporter des solutions pour l'automatisation des tâches<br />● Dévelopement de script pour la mise en forme de données<br />● Créer et tester des outils sur la Predix GE</p>
             </div>
         
-          </div>
+          </div>-->
         
           <div class="tl-item">
             
