--- a/src/app/competence/competence.component.scss
+++ b/src/app/competence/competence.component.scss
@@ -14,7 +14,6 @@
     background-image: url('../../assets/images/back-comp.jpg');
     background-position: center;
     background-size: cover;
-    filter: brightness(80%);
 }
 
 .row{
@@ -29,30 +28,32 @@
     margin:0;
 }
 
+
 p, h1, h2 {
     text-align: center;
 }
 
 
 h1{
-    padding-top: 40px;
+    padding-top: 60px;;
     font-size: 2.4rem;
     font-family: comfortaa;
-    text-shadow: 0 13px 9px black; 
+    text-shadow: 0 13px 9px black, 2px 2px 2px black; 
 }
 
 h2{
     color: cyan;
     text-shadow: 1px 1px 1px black;
     font-weight: 450;
+    padding: 20px;
 }
+
 
 //BEGINNING FLIP CARD
 .flip {
     position: relative;
-
 }
-  
+
 .flip > .front,
 .flip > .back {
     display: block;
@@ -65,6 +66,7 @@ h2{
     margin:0;
     width: 100%;
     height: 100%;
+    box-shadow: 10px 15px 15px 0px rgba(0,0,0,0.7);
 }
 .flip > .back {
     position: absolute;
@@ -120,16 +122,16 @@ h2{
     background-size: cover !important;
     background-position: center !important;
     padding: 1em 2em;
-    background: rgba(0,0,0,0.8);
+    background: rgba(0,0,0,0.5);
     border-radius: 10px;
 }
+
 .flip > .front p,
 .flip > .back p {
-    font-size: 1rem;
+    font-size: 1.3rem;
     line-height: 160%;
     color: #fff;
 }
-
 //END FLIP CARD
 
 
@@ -138,7 +140,7 @@ h2{
     opacity: 0;
     position: absolute;
         left: 47%;
-        top: 97%;
+        top: 96%;
     transform-origin: 50% 50%;
     transform: translate3d(-50%, -50%, 0);
     display: none;
@@ -176,7 +178,7 @@ h2{
 @keyframes arrow-movement {
     0% { 
         opacity: 0;
-        top: 95%;
+        top: 94%;
     }
     70% {
         opacity: 1;
@@ -207,6 +209,18 @@ h2{
     }
     h1{
         font-size: 1.7rem;
+    }
+    h2{
+        font-size: 1.5rem;
+        padding: 0;
+        padding-bottom: 5px;
+    }
+    .flip > .front p,
+    .flip > .back p {
+        font-size: 1rem;
+    }
+    .col-md-6{
+        margin-bottom: 20px;
     }
 }
 
