--- a/src/app/propos/propos.component.scss
+++ b/src/app/propos/propos.component.scss
@@ -282,9 +282,10 @@
 
     h1{
       font-size: 1.25rem;
+      text-shadow: 1px 1px 1px black;
     }
     p{
-      font-size: 1.10rem;
+      font-size: 1rem;
     }
 }
   .container{
