--- a/src/app/competence/competence.component.html
+++ b/src/app/competence/competence.component.html
@@ -8,7 +8,7 @@
                             </div>
                             <div class="back">
                                <h2>Techniques</h2>
-                               <p>◦ Langages de programmation:<br /> HTML/CSS/JS , C# , Java , C/C++ , SQL<br />◦ Notions de méthodes agiles et management</p>
+                               <p>◦ Développement:<br /> HTML/CSS/JS , C# , Java , C/C++ , SQL<br />◦ Notions de méthodes agiles et management</p>
                             </div>
                         </div>
                     <div class="flip left">
@@ -17,7 +17,7 @@
                             </div>
                             <div class="back">
                                <h2>Technologies</h2>
-                               <p>◦ Web Angular/Bootstrap, Ruby on Rails<br />◦ Applications .Net<br />◦ GitHub, déploiement et intégration continue</p>
+                               <p>◦ Web Angular/Bootstrap, Ruby on Rails<br />◦ Applications .Net, jQuery<br />◦ GitHub, déploiement et intégration continue</p>
                             </div>
                         </div>
             </div>
