--- a/src/app/competence/competence.component.html
+++ b/src/app/competence/competence.component.html
@@ -17,7 +17,7 @@
                             </div>
                             <div class="back">
                                <h2>Technologies</h2>
-                               <p>◦ Web Angular/Bootstrap, Ruby on Rails<br />◦ Applications .Net, jQuery<br />◦ GitHub, déploiement et intégration continue</p>
+                               <p>◦ Web Angular/Bootstrap, Ruby on Rails<br />◦ WordPress (Divi theme), .Net, jQuery<br />◦ GitHub, déploiement et intégration continue</p>
                             </div>
                         </div>
             </div>
